实现简单功能

--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -5,25 +5,138 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="yjy.com.accounts.AccountActivity"
+    tools:context="yjy.com.accounts.function.note.AccountActivity"
     tools:showIn="@layout/activity_account">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="开始记账吧"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text= "金额"
+                android:textSize="20sp" />
+
+            <EditText
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="0.0"
+                android:maxEms="10" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="方式"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:layout_width="40dp"
+                android:scaleType="fitXY"
+                android:layout_height="40dp"
+                android:src="@mipmap/apay" />
+
+            <ImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/wx" />
+
+            <ImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="40dp"
+                android:scaleType="fitXY"
+                android:layout_height="40dp"
+                android:src="@mipmap/card" />
+
+            <ImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="40dp"
+                android:scaleType="fitXY"
+                android:layout_height="40dp"
+                android:src="@mipmap/cash" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text= "用途"
+                android:textSize="20sp" />
+
+            <Spinner
+                android:layout_marginLeft="10dp"
+                android:id = "@+id/use_spanner"
+                android:layout_width = "wrap_content"
+                android:layout_height ="wrap_content" >
+            </Spinner >
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text= "备注"
+                android:textSize="20sp" />
+
+            <EditText
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="3"
+                android:hint="花钱干嘛了！！说！！"/>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ADD" />
+            android:text="记一笔" />
 
         <Button
             android:id="@+id/load"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="LOAD" />
+            android:text="显示所有账单" />
 
         <TextView
             android:id="@+id/text"
