--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="yjy.com.accounts.function.note.AccountActivity"
+    tools:context=".function.note.AccountActivity"
     tools:showIn="@layout/activity_account">
 
     <LinearLayout
