--- a/app/src/main/res/menu/menu_account.xml
+++ b/app/src/main/res/menu/menu_account.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="yjy.com.accounts.function.note.AccountActivity">
+    tools:context=".function.note.AccountActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
