--- a/app/src/main/res/layout/widget_date_range_selection.xml
+++ b/app/src/main/res/layout/widget_date_range_selection.xml
@@ -1,7 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
 
+    <TextView
+        android:id="@+id/tv_date_selected_title"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/app_widget_size_45dp"
+        android:gravity="center_vertical"
+        android:text="@string/date_with_colon"
+        android:textSize="@dimen/app_text_size_middle"/>
+
+    <TextView
+        android:id="@+id/tv_selected_from_date"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/app_widget_size_45dp"
+        android:gravity="center_vertical"
+        android:hint="@string/from_date"
+        android:textSize="@dimen/app_text_size_small"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/app_widget_size_45dp"
+        android:gravity="center_vertical"
+        android:text="-----"/>
+
+    <TextView
+        android:id="@+id/tv_selected_to_date"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/app_widget_size_45dp"
+        android:gravity="center_vertical"
+        android:hint="@string/to_date"
+        android:textSize="@dimen/app_text_size_small"/>
 </LinearLayout>
