--- a/app/src/main/res/layout/widget_date_range_selection.xml
+++ b/app/src/main/res/layout/widget_date_range_selection.xml
@@ -2,35 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="horizontal">
+              android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_date_selected_title"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/app_widget_size_45dp"
-        android:gravity="center_vertical"
-        android:text="@string/date_with_colon"
-        android:textSize="@dimen/app_text_size_middle"/>
+    <RadioGroup
+        android:id="@+id/rg_daterule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_selected_from_date"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/app_widget_size_45dp"
-        android:gravity="center_vertical"
-        android:hint="@string/from_date"
-        android:textSize="@dimen/app_text_size_small"/>
+        <RadioButton
+            android:id="@+id/rb_lastweek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last_week"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/app_widget_size_45dp"
-        android:gravity="center_vertical"
-        android:text="-----"/>
+        <RadioButton
+            android:id="@+id/rb_lastmonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last_month"/>
 
-    <TextView
-        android:id="@+id/tv_selected_to_date"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/app_widget_size_45dp"
-        android:gravity="center_vertical"
-        android:hint="@string/to_date"
-        android:textSize="@dimen/app_text_size_small"/>
+        <RadioButton
+            android:id="@+id/rb_lastyear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last_year"/>
+
+        <RadioButton
+            android:id="@+id/rb_custom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/custom_date"/>
+    </RadioGroup>
+
+    <LinearLayout
+        android:id="@+id/ll_custom_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_date_selected_title"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/app_widget_size_45dp"
+            android:gravity="center_vertical"
+            android:text="@string/date_with_colon"
+            android:textSize="@dimen/app_text_size_middle"/>
+
+        <TextView
+            android:id="@+id/tv_selected_from_date"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/app_widget_size_45dp"
+            android:gravity="center_vertical"
+            android:hint="@string/from_date"
+            android:textSize="@dimen/app_text_size_small"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/app_widget_size_45dp"
+            android:gravity="center_vertical"
+            android:text="-----"/>
+
+        <TextView
+            android:id="@+id/tv_selected_to_date"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/app_widget_size_45dp"
+            android:gravity="center_vertical"
+            android:hint="@string/to_date"
+            android:textSize="@dimen/app_text_size_small"/>
+    </LinearLayout>
 </LinearLayout>
